src/ui/radarr_ui/blocklist/snapshots/managarr__ui__radarr_ui__blocklist__blocklist_ui_tests__tests__blocklist_ui_renders_with_blocklist_items.snap
---
source: src/ui/radarr_ui/blocklist/blocklist_ui_tests.rs
expression: output
---
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Movie Title             Source Title                         Languages    Quality      Formats     Date              
=>                         Test.Movie.2023.1080p                                                      1970-01-01 00:00:0
                           Another.Movie.2023.720p                                                    1970-01-01 00:00:0
